internal/buf/cmd/buf/testdata/workspace/success/diamond/buf.work
version: v1beta1
directories:
  - other/proto
  - private/proto
  - proto
