internal/buf/cmd/buf/testdata/workspace/fail/jumpcontext/buf.work
version: v1beta1
directories:
  - ../breaking/other/proto
